# ubatuba-events-tracker

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  sample_events.json  turbo.json
apps/api/: .env.example  .env.example-docker  Dockerfile  docker-compose.yml  package.json  pyproject.toml  requirements.txt
apps/api/migrations/: env.py
apps/api/migrations/versions/: 09a6a0988a3d_create_event_and_user_table.py  4b56b1667cc8_create_users_and_events_tables.py  68e1277c2517_create_event_table.py  eeda2447320f_create_users_and_events_tables.py
apps/api/src/: main.py
apps/api/src/auth/: bearer.py  handler.py
apps/api/src/crud/: base.py
apps/api/src/database/: session.py
apps/api/src/models/: event.py  user.py
apps/api/src/routes/: auth.py  events.py
apps/api/src/schemas/: event.py  user.py
apps/web/: jest.config.ts  middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: global-error.tsx  layout.tsx  not-found.tsx  page.tsx
apps/web/app/events/: page.tsx
apps/web/components/ConfirmationPopUp/: index.tsx
apps/web/components/CreateEventDialog/: index.tsx
apps/web/components/EditEventDialog/: index.tsx
apps/web/components/EventCard/: index.tsx
apps/web/components/Header/: index.tsx
apps/web/components/LoadingComponent/: index.tsx
apps/web/hooks/: useAuthentication.ts  useEvents.ts
apps/web/lib/: utils.ts
apps/web/services/: axios.ts
apps/web/tests/: test-utils.tsx
apps/web/types/: index.ts
docker/api/: Dockerfile
docker/web/: Dockerfile
(+11 files in other folders)
