[tool.poetry]
name = "ubatuba-events-api"
version = "0.1.0"
description = "Backend FastAPI for Ubatuba Events Tracker"
authors = ["Lucas Tanaka <lucasfktanaka@gmail.com>"]

packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.12"
uvicorn = "0.34.2"
SQLAlchemy = "2.0.40"
alembic = "1.15.2"
pydantic = "2.11.3"
pydantic-core = "2.33.1"
python-jose = "3.4.0"
psycopg2-binary = "2.9.10"
python-dotenv = "1.1.0"
requests = "2.32.3"
starlette = "0.46.2"
anyio = "4.9.0"
annotated-types = "0.7.0"
h11 = "0.16.0"
Mako = "1.3.10"
MarkupSafe = "3.0.2"
uritemplate = "4.1.1"
urllib3 = "2.4.0"
cryptography = "^44.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.10.1"
pytest = "^8.0.0"
pylint-pydantic = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
